# APAN5560-GenAI-RolePlayChat-AI-Project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
back-end/: .dockerignore  Dockerfile  alembic.ini  requirements.txt
back-end/alembic/: env.py
back-end/alembic/versions/: .gitkeep  20251211_1740_8997d1353b75_create_api_providers_and_prompt_.py  20251211_1948_1c0db4e8a004_add_knowledge_bases_and_kb_documents.py  20251211_2013_b7fa5b21d643_add_embedding_column_to_kb_documents.py  20251211_2044_46700c8026a5_add_characters_conversations_messages.py  20251211_2115_a07523f0207c_add_characters_conversations_messages.py  20251212_1400_add_provider_type_to_api_providers.py
back-end/app/: __init__.py  main.py
back-end/app/core/: __init__.py  config.py  database.py
back-end/app/models/: __init__.py  api_provider.py  character.py  conversation.py  kb_document.py  knowledge_base.py  message.py  prompt_template.py
back-end/app/routers/: __init__.py  api_providers.py  characters.py  conversations.py  discover.py  knowledge_bases.py  prompt_templates.py
back-end/app/schemas/: __init__.py  api_provider.py  character.py  message.py  (+3 more)
character cards/: Lynae.json
data model/: APAN_5560_FInal.ipynb  APAN_5560_FInal.py  Generative_AI_API.ipynb  Generative_AI_models.py
data model/app/: app:hf_inference.py  app:local_gpt2.py  app:main.py  app:schemas.py  app:settings.py
front-end/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
front-end/src/: App.tsx  index.css
(+19 files in other folders)
