[project]
name = "apan5560-genai-roleplaychat-ai-project"
version = "0.1.0"
description = "A Role-Play Chat AI application using fine-tuned GPT-2 model with FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "fastapi[standard]>=0.124.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
